[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-download"]
build-backend = "setuptools.build_meta"

[project]
name = "hadolint-py"
dynamic = ["version"]
description = "Python wrapper around invoking hadolint (https://github.com/hadolint/hadolint)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/shenxianpeng/hadolint-pre-commit"

[tool.setuptools]
packages = ["hadolint_py"]

[tool.setuptools_scm]
# Version is derived automatically from git tags (e.g. tag v2.14.0.1 → version 2.14.0.1).
# No manual version bumping needed; just create a git tag to cut a release.
