[options]
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.14.0/hadolint-linux-x86_64
    sha256 = 6bf226944684f56c84dd014e8b979d27425c0148f61b3bd99bcc6f39e9dc5a47
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.14.0/hadolint-linux-arm64
    sha256 = 331f1d3511b84a4f1e3d18d52fec284723e4019552f4f47b19322a53ce9a40ed
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.14.0/hadolint-macos-x86_64
    sha256 = 2b69a853433f1eca522ffb921cd490bd1321424d03331fd8390f93b7fb4a02e9
    [hadolint]
    group = hadolint-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.14.0/hadolint-macos-arm64
    sha256 = 3625e2e9f43dcfe7bd38738a5f5520ed50ce39ed28485266e6803dd7bc197b10
    [hadolint.exe]
    group = hadolint-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    url = https://github.com/hadolint/hadolint/releases/download/v2.14.0/hadolint-windows-x86_64.exe
    sha256 = 8e0ee174f88edb14f207a68430c7a53c2883ed509cdbde9a3a26fffa140fa5e4
